fixing 'portofolio_wrap-container' flex box

--- a/style.css
+++ b/style.css
@@ -815,11 +815,16 @@ header .container{
         grid-template-columns: repeat(2,1fr)
     }
 }
-@media screen and (max-width:576px) {
-    .portfolio_wrap-container{
+
+@media screen and (max-width: 568px){
+    .portfolio_wrap-container {
+        display: flex;
+        text-align: center;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
         grid-template-columns: 1fr;
-    }
-    .portfolio_item li{
-        font-size: 16px;
+        row-gap: 2rem;
+        border-radius: 10px;
     }
 }
